app/assets/stylesheets/albums/index.css.scss
.albums.index {
  .album-cover {
    display: inline-block;
    background-size: cover;
    height: 250px;
    width: 250px;
    margin: 10px;
    position: relative;
  }

  .album-title-overlay {
    background-color: black;
    width: 230px;
    height: 30px;
    position: absolute;
    bottom: 30px;
    @include opacity(0.7);
  }

  .album-title {
    position: absolute;
    bottom: 30px;
    padding-left: 20px;
    line-height: 30px;
    color: white;
    font-weight: 900;
    text-decoration: none;
  }
}

